create convo base functionality that adds user as owner
