# components/WebServer/routes/routes.js
@@ -4,6 +4,8 @@ module.exports = (webServer) => {
     return {
         "/login": require('./login')(webServer),
         "/api/users": require('./api/users')(webServer),
-        "/api/user": require('./api/user')(webServer)
+        "/api/user": require('./api/user')(webServer), 
+        "/api/conversations": require('./api/conversations')(webServer), 
+        "/api/conversation": require('./api/conversation')(webServer)
     }
 }
